# eckwms-movFast

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_WINDOWS.md  CUsersDmytroeckwms-movFasteckwms_copy.db  CUsersDmytroeckwms-movFastinstance_logs.txt  CUsersDmytroeckwms-movFastsearch_results.txt  DEV_SCRIPTS_README.md  LICENSE  README.md  SERVER_INTEGRATION.md  WORKFLOW_ARCHITECTURE.md  build-only.bat  build_apk.bat  dev-deploy.bat  dev-deploy.sh  gradle.properties  opencode.json  settings.gradle.kts  tmp_trip2.txt  tmp_trip_logcat.txt  watch-logs.bat  watch-logs.sh
.claude/: settings.local.json
.eck/: CONTEXT.md  HANDOVER.md  JOURNAL.md  PAIR_CODE_ONBOARDING.md  ROADMAP.md  SCANNER_ENGINE_RE.md  SMART_CODES.md  TECH_DEBT.md  TRACK_ESTIMATION.md  UI_CONVENTIONS.md
.eck/snap/: AnswerToSA.md
app/: build.gradle.kts
app/libs/: xcscanner_qrcode_v1.3.56.1.7-release.aar  xcscanner_v1.1.10-release.aar  xcscanner_v1.1.11-release.aar  xcscanner_v1.1.12-release.aar  xcscanner_v1.1.13-release.aar  xcscanner_v1.1.14-release.aar  xcscanner_v1.1.17-release.aar  xcscanner_v1.1.8-release.aar  xcscanner_v1.1.9-release.aar
app/schemas/com.xelth.eckwms_movfast.data.local.AppDatabase/: 17.json  18.json  19.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: trip_map.html
app/src/main/assets/workflows/: device_intake.json  receiving.json  (+1 more)
app/src/paid/: AndroidManifest.xml
app/src/test/resources/: track_fixtures.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/wmsdb/: Cargo.toml
rust/wmsdb/src/: lib.rs
scripts/: smoke_test.sh
(+179 files in other folders)
