[package]
name = "wmsdb"
version = "0.1.0"
edition = "2021"

# Embedded SurrealDB for the PDA app — spike. Pin to the SERVER's engine
# version (9eck.com workspace, Cargo.lock: 3.2.1): the phone will eventually
# sync with the mesh nodes and data-format compatibility matters.
[dependencies]
surrealdb = { version = "=3.2.1", default-features = false, features = [
    "kv-surrealkv",
    "kv-mem",
] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
jni = "0.21"
once_cell = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Spike profile: LTO and codegen-units=1 are OFF for build speed — turn them
# back on for the production integration (they shave real MBs off the .so).
opt-level = "z"
strip = true
